--- a/assets/component-menu-drawer.css
+++ b/assets/component-menu-drawer.css
@@ -149,18 +149,25 @@ details[open].menu-opening > .menu-drawer__submenu {
   right: 3rem;
 }
 
-.menu-drawer__menu-item--active,
-.menu-drawer__menu-item:focus,
-.menu-drawer__close-button:focus,
-.menu-drawer__menu-item:hover,
+/* .menu-drawer__menu-item--active{
+
+}
+.menu-drawer__menu-item:focus{
+
+}
+.menu-drawer__close-button:focus{
+
+} */
+.menu-drawer__menu-item:hover{
+  color: #6db9e8;
+}
 .menu-drawer__close-button:hover {
-  color: rgb(var(--color-foreground));
-  background-color: rgba(var(--color-foreground), 0.04);
+   color: #6db9e8;
 }
 
-.menu-drawer__menu-item--active:hover {
-  background-color: rgba(var(--color-foreground), 0.08);
-}
+/* .menu-drawer__menu-item--active:hover {
+  
+} */
 
 .js .menu-drawer__menu-item .icon-caret,
 .no-js .menu-drawer .icon-arrow {
