--- a/assets/collapsible-content.css
+++ b/assets/collapsible-content.css
@@ -97,9 +97,10 @@
   background: rgba(var(--color-foreground), 0.04);
 }
 
+/* Removed underline */
 .collapsible-content summary:hover .accordion__title {
-  text-decoration: underline;
-  text-underline-offset: 0.3rem;
+  text-decoration: none;
+  /* text-underline-offset: 0.3rem; */
 }
 
 /* check for flexbox gap in older Safari versions */
