--- a/assets/component-card.css
+++ b/assets/component-card.css
@@ -247,8 +247,7 @@
   }
 
   .underline-links-hover:hover a {
-    text-decoration: underline;
-    text-underline-offset: 0.3rem;
+    text-decoration: none;
   }
 }
 
