--- a/assets/section-contact-form.css
+++ b/assets/section-contact-form.css
@@ -24,6 +24,10 @@
   margin-top: 3rem;
 }
 
+#ContactForm-phone{
+  /* display: none; */
+}
+
 @media screen and (min-width: 750px) {
   .contact__button {
     margin-top: 4rem;
@@ -37,3 +41,4 @@
     grid-column-gap: 2rem;
   }
 }
+
